trunk/Source/include/GLS_CUDA_API.hpp


//-- type declarations -------------------------------------------------------
typedef void * TCUdeviceptr;


typedef int TCUdevice;


struct DECLSPEC_DRECORD TCUcontext
{
};



typedef TCUcontext *PCUcontext;


struct DECLSPEC_DRECORD TCUarray
{
};



typedef TCUarray *PCUarray;


struct DECLSPEC_DRECORD TCUdevprop
{
public:
	int maxThreadsPerBlock;
	System::StaticArray<int, 3> maxThreadsDim;
	System::StaticArray<int, 3> maxGridSize;
	int sharedMemPerBlock;
	int totalConstantMemory;
	int SIMDWidth;
	int memPitch;
	int regsPerBlock;
	int clockRate;
	int textureAlign;
};


enum TCUjit_target : unsigned int { CU_TARGET_COMPUTE_10, CU_TARGET_COMPUTE_11, CU_TARGET_COMPUTE_12, CU_TARGET_COMPUTE_13 };


enum TCUjit_fallback : unsigned int { CU_PREFER_PTX, CU_PREFER_BINARY };


enum TCUgraphicsRegisterFlags : unsigned int { CU_GRAPHICS_REGISTER_FLAGS_NONE };


enum TCUgraphicsMapResourceFlags : unsigned int { CU_GRAPHICS_MAP_RESOURCE_FLAGS_NONE, CU_GRAPHICS_MAP_RESOURCE_FLAGS_READ_ONLY, CU_GRAPHICS_MAP_RESOURCE_FLAGS_WRITE_DISCARD };


enum TCUarray_cubemap_face : unsigned int { CU_CUBEMAP_FACE_POSITIVE_X, CU_CUBEMAP_FACE_NEGATIVE_X, CU_CUBEMAP_FACE_POSITIVE_Y, CU_CUBEMAP_FACE_NEGATIVE_Y, CU_CUBEMAP_FACE_POSITIVE_Z, CU_CUBEMAP_FACE_NEGATIVE_Z };


struct DECLSPEC_DRECORD TcudaFuncAttributes
{
public:
	NativeUInt sharedSizeBytes;
	NativeUInt constSizeBytes;
	NativeUInt localSizeBytes;
	int maxThreadsPerBlock;
	int numRegs;
	int ptxVersion;
	int binaryVersion;
	System::StaticArray<int, 6> __cudaReserved;
};



enum TcudaFuncCache : unsigned int { cudaFuncCachePreferNone, cudaFuncCachePreferShared, cudaFuncCachePreferL1 };


typedef unsigned TCUresult;


struct TCUDA_MEMCPY2D;

typedef TCUDA_MEMCPY2D *PCUDA_MEMCPY2D;


struct DECLSPEC_DRECORD TCUDA_MEMCPY2D
{
public:
	unsigned srcXInBytes;
	unsigned srcY;
	TCUmemorytype srcMemoryType;
	void *srcHost;
	void *srcDevice;
	TCUarray *srcArray;
	unsigned srcPitch;
	unsigned dstXInBytes;
	unsigned dstY;
	TCUmemorytype dstMemoryType;
	void *dstHost;
	void *dstDevice;
	TCUarray *dstArray;
	unsigned dstPitch;
	unsigned WidthInBytes;
	unsigned Height;
};



struct DECLSPEC_DRECORD TCUDA_MEMCPY3D
{
public:
	unsigned srcXInBytes;
	unsigned srcY;
	unsigned srcZ;
	unsigned srcLOD;
	TCUmemorytype srcMemoryType;
	void *srcHost;
	void *srcDevice;
	TCUarray *srcArray;
	void *reserved0;
	unsigned srcPitch;
	unsigned srcHeight;
	unsigned dstXInBytes;
	unsigned dstY;
	unsigned dstZ;
	unsigned dstLOD;
	TCUmemorytype dstMemoryType;
	void *dstHost;
	void *dstDevice;
	TCUarray *dstArray;
	void *reserved1;
	unsigned dstPitch;
	unsigned dstHeight;
	unsigned WidthInBytes;
	unsigned Height;
	unsigned Depth;
};



struct TCUDA_ARRAY_DESCRIPTOR;

typedef TCUDA_ARRAY_DESCRIPTOR *PCUDA_ARRAY_DESCRIPTOR;


struct DECLSPEC_DRECORD TCUDA_ARRAY_DESCRIPTOR
{
public:
	unsigned Width;
	unsigned Height;
	TCUarray_format Format;
	unsigned NumChannels;
};



struct DECLSPEC_DRECORD TCUDA_ARRAY3D_DESCRIPTOR
{
public:
	unsigned Width;
	unsigned Height;
	unsigned Depth;
	TCUarray_format Format;
	unsigned NumChannels;
	unsigned Flags;
};



enum TCUGLmap_flags : unsigned int { CU_GL_MAP_RESOURCE_FLAGS_NONE, CU_GL_MAP_RESOURCE_FLAGS_READ_ONLY, CU_GL_MAP_RESOURCE_FLAGS_WRITE_DISCARD };


typedef System::StaticArray<unsigned, 3> TDim3;


typedef void * HGPUNV;


typedef TCUresult __stdcall (*TcuInit)(unsigned Flags);


typedef TCUresult __stdcall (*TcuDriverGetVersion)(/* out */ int &driverVersion);


typedef TCUresult __stdcall (*TcuDeviceGet)(int &device, int ordinal);


typedef TCUresult __stdcall (*TcuDeviceGetCount)(int &count);


typedef TCUresult __stdcall (*TcuDeviceGetName)(char * name, int len, int dev);


typedef TCUresult __stdcall (*TcuDeviceComputeCapability)(int &major, int &minor, int dev);


typedef TCUresult __stdcall (*TcuDeviceTotalMem)(Gls_cl_platform::Psize_t bytes, int dev);


typedef TCUresult __stdcall (*TcuDeviceGetProperties)(TCUdevprop &prop, int dev);


typedef TCUresult __stdcall (*TcuDeviceGetAttribute)(Gls_cl_platform::Psize_t pi, TCUdevice_attribute attrib, int dev);


typedef TCUresult __stdcall (*TcuCtxCreate)(PCUcontext &pctx, unsigned Flags, int dev);


typedef TCUresult __stdcall (*TcuCtxDestroy)(PCUcontext ctx);


typedef TCUresult __stdcall (*TcuCtxAttach)(PCUcontext &pctx, unsigned Flags);


typedef TCUresult __stdcall (*TcuCtxDetach)(PCUcontext ctx);


typedef TCUresult __stdcall (*TcuMemHostAlloc)(void * &pp, unsigned bytesize, unsigned Flags);


typedef TCUresult __stdcall (*TcuMemHostGetDevicePointer)(void * &pdptr, void * p, unsigned Flags);


typedef TCUresult __stdcall (*TcuTexRefSetArray)(PCUtexref hTexRef, PCUarray hArray, unsigned Flags);


typedef TCUresult __stdcall (*TcuTexRefSetFlags)(PCUtexref hTexRef, unsigned Flags);
extern PACKAGE TCUresult CUDA_SUCCESS;

extern PACKAGE TcuInit cuInit;

extern PACKAGE TcuDriverGetVersion cuDriverGetVersion;

extern PACKAGE TcuDeviceGet cuDeviceGet;

extern PACKAGE TcuDeviceGetCount cuDeviceGetCount;

extern PACKAGE TcuDeviceGetName cuDeviceGetName;

extern PACKAGE TcuDeviceComputeCapability cuDeviceComputeCapability;

extern PACKAGE TcuDeviceTotalMem cuDeviceTotalMem;

extern PACKAGE TcuDeviceGetProperties cuDeviceGetProperties;

extern PACKAGE TcuDeviceGetAttribute cuDeviceGetAttribute;

extern PACKAGE TcuCtxCreate cuCtxCreate;

extern PACKAGE TcuCtxDestroy cuCtxDestroy;

extern PACKAGE TcuCtxAttach cuCtxAttach;

extern PACKAGE TcuCtxDetach cuCtxDetach;

extern PACKAGE TcuMemHostAlloc cuMemHostAlloc;

extern PACKAGE TcuMemHostGetDevicePointer cuMemHostGetDevicePointer;

extern PACKAGE TcuTexRefSetArray cuTexRefSetArray;

extern PACKAGE TcuTexRefSetFlags cuTexRefSetFlags;